# archive-core

./: .dockerignore  .gitignore  LICENSE  Makefile  Readme.md  docker-compose.yaml  pyproject.toml
archive/: __init__.py  access_api.py  consumer_api.py  database_api.py  decision_api.py  mview.py  store_api.py  utility_api.py
archive/migrations/: 0001_initialize.sql  0002_add_recent_messages.sql  0003_update_messages.sql  0004_add_text_search.sql  0005_update_messages.sql
docker/: Dockerfile  install_deps.py
tests/: conftest.py  requirements.txt  test_access_api.py  test_consumer_api.py  test_database_api.py  test_decision_api.py  test_mview.py  test_store_api.py  test_utility_api.py
